--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -7,11 +7,13 @@
     "# Building a stock database using Polygon\n",
     "*Requirements: Python 3.11.4, a Polygon.io and a stockanalysis.com subscription*\n",
     "\n",
-    "The goal is to create a financial database of 1-minute OHLCV data from 2004 and beyond, delisted or listed, for common stocks and ADR common stocks. I use Polygon for price data, which is \"ticker-centric\". All data from Polygon is point-in-time by ticker. This means we have to take care of renamings ourselves (very annoying). Some vendors already do renamings (e.g. Tiingo). And almost all of the vendors that do renamings have a small bit of survivorship-bias, because when a ticker is re-used the old data is lost. Polygon does not have this problem.\n",
+    "*Currently undergoing a major overhaul. Not everything may work, especially the updates.*\n",
+    "\n",
+    "The goal is to create a financial database of 1-minute OHLCV data from 2004, delisted or listed, for all common stocks (ADR and NYRS included). I use Polygon for price data, which is \"ticker-centric\". All data from Polygon is point-in-time by ticker. This means we have to take care of renamings ourselves. Some vendors already do renamings (e.g. Tiingo). And almost all of the vendors that do renamings have a small bit of survivorship-bias, because when a ticker is re-used the old data is lost. Polygon does not have this problem.\n",
     "\n",
     "I will also make sure that it is easy to update without redownloading everything (that is what the 'Update' paragraph in each notebook is for!). However it is *not* optimized to update daily. I only intend to update monthly. My backtesting and live trading framework will be different. E.g. for a trading system that trades daily bars, I will only download the required daily bars every day in the live system and not update the entire database for all tickers. For a day-trading system I will use screeners, which also do not require downloading all 6000+ stocks. In would be very hard to constantly stream 6000+ stocks at the same time, if not impossible.\n",
     "\n",
-    "With a previous project I tried to convert tick quote data to quotes and then merge them with bars to get a realistic bid-ask spread. I have decided to not use quote data anymore. It is simply too expensive, cumbersome or simply impossible. I would have to download all tick data for all dates for all tickers in order to get quotebars, which will be several TBs. Instead, I will just trade using 1-minute OHLC. When backtesting, I will assume a spread of 1 tick or a few cents. I also will avoid illiquid stocks. If I want a more realistic estimate, I will sample the bid-ask spread throughout the day or something.\n",
+    "With a previous project I tried to convert tick quote data to quotes and then merge them with bars to get a realistic bid-ask spread. I have decided to not use quote data anymore. It is simply too expensive, cumbersome or simply impossible. I would have to download all tick data for all dates for all tickers in order to get quotebars, which will be several TBs. Instead, I will just trade using 1-minute OHLC. When backtesting, I will assume a spread of 1 tick or a few cents. I also will avoid illiquid stocks. If I want a more realistic estimate, I will sample the bid-ask spread throughout the day or something. I am not interested in competing with the MMs anyways.\n",
     "\n",
     "I will organize my data in the following way (only folders and important files shown):\n",
     "\n",
@@ -39,7 +41,7 @@
     "\n",
     "Because the rate limit for the free Polygon plan is quite low, you need at least the starter subscription (29 USD/month). They actually have a 20% discount for students.\n",
     "\n",
-    "The most important file is <code>tickers_v{version}.csv</code> which resides in the <code>data</code> folder. This is a csv containing all tickers. This is the file which you have to loop through when filtering/backtesting. It is not an easy task to build the ticker lists. Or even handle to all other problems such as renamings, delistings, early closes, dividends and splits. I have spent quite some time on this. You *cannot* just loop through the most recent ticker list that Polygon provides. \n",
+    "The most important file is <code>tickers_v{version}.csv</code> which resides in the <code>data</code> folder. This is a csv containing all tickers. This is the file which you have to loop through when filtering/backtesting. It is not an easy task to build the ticker lists. Or even handle to all other problems such as renamings, delistings, early closes, dividends and splits. I have spent quite some time on this. You *cannot* just loop through the most recent ticker list that Polygon provides.\n",
     "\n",
     "The series of notebooks:\n",
     "1. An introduction to the problems with the Polygon ticker list.\n",
@@ -52,6 +54,8 @@
     "8. Renamings.\n",
     "9. Aggregate to higher timeframes.\n",
     "10. Some extra handy functions.\n",
+    "\n",
+    "Yes I know that a SQL database is much better, however I care about simplicity more than anything else. It should be straightforward to put everything in a proper database.\n",
     "\n",
     "*Note: a data point at 15:59 with OHLC means that the open was at 15:59:00 and close at 16:00:00.*"
    ]
