--- a/02_market_hours.ipynb
+++ b/02_market_hours.ipynb
@@ -394,6 +394,26 @@
     "    \"\"\"\n",
     "    trading_days = get_market_dates()\n",
     "    return trading_days[trading_days.index(day) - 1]\n",
+    "\n",
+    "def remove_extended_hours(bars):\n",
+    "    \"\"\"\n",
+    "    Remove extended hours.\n",
+    "    \"\"\"\n",
+    "    # Remove non-regular trading minutes. Only the post-market hours of early closes remain.\n",
+    "    bars = bars.between_time(\"9:30\", \"15:59\")\n",
+    "\n",
+    "    # Remove early close post-market bars\n",
+    "    market_hours = get_market_calendar()\n",
+    "    early_closes = market_hours[market_hours[\"regular_close\"] != time(15, 59)]\n",
+    "    for date_, early_close in early_closes.iterrows():\n",
+    "        bars = bars[\n",
+    "            ~(\n",
+    "                (bars.index > datetime.combine(date_, early_close[\"regular_close\"]))\n",
+    "                & (bars.index <= datetime.combine(date_, time(19, 59)))\n",
+    "            )\n",
+    "        ]\n",
+    "\n",
+    "    return bars\n",
     "    "
    ]
   },
