--- a/03_tickers.ipynb
+++ b/03_tickers.ipynb
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
        "16253  2022-06-08    CS  1326801.0   BBG000MM2P62  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1410,7 @@
        "27993  2024-04-19   CS  1326801.0   BBG000MM2P62  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1505,7 +1505,7 @@
        "45917  2024-04-19   CS  1913510.0                 "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1574,7 @@
        "6338  1851908.0                 "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1689,7 @@
        "40047  719739.0   BBG000BT0CM2  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1797,7 @@
        "21791  2024-04-19   CS  1657853.0   BBG011N57109  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1933,7 @@
        "4  1090872.0   BBG000C2V3D6  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2071,7 +2071,7 @@
        "12389  800457.0   BBG000JQJC22  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2085,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2195,7 +2195,7 @@
        "12619  2014-06-16  NONE  1024333.0                 "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2221,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2305,7 +2305,7 @@
        "2  1090872.0   BBG000C2V3D6  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2323,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2407,7 @@
        "49007  2023-10-11    CS  1621443.0   BBG007BBS8B7  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2420,7 +2420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2492,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2573,16 +2573,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28900"
+       "18397"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2600,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2717,7 +2717,7 @@
        "4  1090872.0   BBG000C2V3D6  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2743,7 +2743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2860,7 +2860,7 @@
        "5  1090872.0   BBG000C2V3D6  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2874,7 +2874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2883,7 +2883,7 @@
        "26407"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2905,7 +2905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3022,7 +3022,7 @@
        "10  2003-09-10  2010-02-05    CS  1099290.0                 "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3045,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3054,7 +3054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3063,7 +3063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3093,7 +3093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3184,7 +3184,7 @@
        "81  2003-09-10  2004-11-05  NONE        NaN            NaN  "
       ]
      },
-     "execution_count": 223,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3249,7 +3249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3340,7 +3340,7 @@
        "35  2021-07-19  2022-08-19  NONE  1209028.0            NaN  "
       ]
      },
-     "execution_count": 224,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3354,7 +3354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3445,7 +3445,7 @@
        "50  1158449.0   BBG000F7RCJ1  "
       ]
      },
-     "execution_count": 225,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3459,7 +3459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3550,7 +3550,7 @@
        "20  2010-12-15  2012-10-15  NONE  1499593.0            NaN  "
       ]
      },
-     "execution_count": 226,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3577,7 +3577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3668,7 +3668,7 @@
        "100  2005-08-09  2005-08-16    CS   712034.0   BBG000J06K07  "
       ]
      },
-     "execution_count": 227,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3688,14 +3688,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "948\n"
+      "1193\n"
      ]
     },
     {
@@ -3753,14 +3753,14 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>ABEO.W</td>\n",
-       "      <td>ABEONA THERAPEUTICS INC WT PUR COM</td>\n",
+       "      <th>38</th>\n",
+       "      <td>AALC.P</td>\n",
+       "      <td>AMERICAN AIRLINES GROUP INC SER A CONV PREF STK</td>\n",
        "      <td>False</td>\n",
-       "      <td>2015-06-22</td>\n",
-       "      <td>2016-10-24</td>\n",
+       "      <td>2013-12-09</td>\n",
+       "      <td>2014-04-08</td>\n",
        "      <td>NONE</td>\n",
-       "      <td>318306.0</td>\n",
+       "      <td>6201.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3768,18 +3768,18 @@
        "</div>"
       ],
       "text/plain": [
-       "       ticker                                               name  active  \\\n",
-       "7      AAB.WS  LEHMAN BROTHERS CURRENCY BASKET WTS EXP 2/13/2008   False   \n",
-       "25   AAG.PRTC                       AMER ANNTY GRP 91/4% (TOPRS)   False   \n",
-       "103    ABEO.W                 ABEONA THERAPEUTICS INC WT PUR COM   False   \n",
+       "      ticker                                               name  active  \\\n",
+       "7     AAB.WS  LEHMAN BROTHERS CURRENCY BASKET WTS EXP 2/13/2008   False   \n",
+       "25  AAG.PRTC                       AMER ANNTY GRP 91/4% (TOPRS)   False   \n",
+       "38    AALC.P    AMERICAN AIRLINES GROUP INC SER A CONV PREF STK   False   \n",
        "\n",
-       "     start_date    end_date  type       cik composite_figi  \n",
-       "7    2006-08-08  2008-02-08  NONE       NaN            NaN  \n",
-       "25   2004-01-30  2004-03-05  NONE       NaN            NaN  \n",
-       "103  2015-06-22  2016-10-24  NONE  318306.0            NaN  "
+       "    start_date    end_date  type     cik composite_figi  \n",
+       "7   2006-08-08  2008-02-08  NONE     NaN            NaN  \n",
+       "25  2004-01-30  2004-03-05  NONE     NaN            NaN  \n",
+       "38  2013-12-09  2014-04-08  NONE  6201.0            NaN  "
       ]
      },
-     "execution_count": 228,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3792,6 +3792,7 @@
     "        tickers_v1[\"ticker\"].str.contains(\"\\.Z\") |\n",
     "        tickers_v1[\"ticker\"].str.contains(\"\\.V\") |\n",
     "        tickers_v1[\"ticker\"].str.contains(\"\\.U\") |\n",
+    "        tickers_v1[\"ticker\"].str.contains(\"\\.P\") |\n",
     "        tickers_v1[\"ticker\"].str.contains(\"\\.PRTC\") |\n",
     "        tickers_v1[\"ticker\"].str.contains(\"\\.RTS\") |\n",
     "        tickers_v1[\"ticker\"].str.contains(\"\\.PRU\") |\n",
@@ -3807,14 +3808,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "467\n"
+      "919\n"
      ]
     },
     {
@@ -3898,21 +3899,21 @@
        "21  2012-10-15  NONE  1499593.0            NaN  "
       ]
      },
-     "execution_count": 229,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "###\n",
-    "tickers_units = tickers_v1[(tickers_v1['ticker'].str.len() == 5) & (tickers_v1['ticker'].str[-1].isin(['U', 'W', 'P']))]\n",
+    "tickers_units = tickers_v1[(tickers_v1['ticker'].str.replace('.','').str.len() == 5) & (tickers_v1['ticker'].str[-1].isin(['U', 'W', 'P']))]\n",
     "print(len(tickers_units))\n",
     "tickers_units.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3929,7 +3930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3937,7 +3938,7 @@
      "output_type": "stream",
      "text": [
       "26407\n",
-      "18865\n"
+      "18835\n"
      ]
     }
    ],
@@ -3957,7 +3958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3988,7 +3989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3998,7 +3999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4019,14 +4020,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rerun the merging! Some /A are corrected to .A which means that it should be merged with the corresponding .A ticker. Search in the ticker list for 'BRK' and you will see what I mean.\n",
+    "**Rerun the merging!** \n",
     "\n",
-    "Finally, we save the merged and cleaned ticker list to <code>tickers_v2.csv</code> and give an unique identifier."
+    "Some /A are corrected to .A which means that it should be merged with the corresponding .A ticker. Search in the ticker list for 'BRK' and you will see what I mean. Go back and rerun the cells for merging.\n",
+    "\n",
+    "After merging again, we save the merged and cleaned ticker list to <code>tickers_v2.csv</code> and give an unique identifier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4036,15 +4039,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total tickers: 18427\n",
-      "Unique tickers: 15802\n"
+      "Total tickers: 18397\n",
+      "Unique tickers: 15779\n"
      ]
     }
    ],
