--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -1305,112 +1305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7.5 Halt detection\n",
-    "**I decided to skip halt detection, as the flag may not be very useful as most of the time it is just an inverse of 'tradeable'. Nevertheless, I will not delete this section of code to show how it is done.**\n",
-    "\n",
-    "We cannot detect all halts without tick data. However we are not interested in pre- and post-market halts anyways. We care about the liquid stocks that are halted intraday and have decent volume. Halts take a minimum of 5 minutes. This means at least 4 OHLC 1-minutes bars with no data, because a halt can start *during* the OHLC bar.\n",
-    "\n",
-    "For each stock where the turnover is more than 2.5 million dollars we will check whether there are 4 empty bars during regular hours. Illiquid stocks do not trade all minutes and may be incorrectly flagged. This happens quite often.\n",
-    "\n",
-    "The best way to do this is to flag all 'suspicious' empty periods and check with tick data if the quotes dissapear. However I do not yet have access to tick data. When we have tick data, we can just loop over the minutes with a 'halted' flag True and check if there exist quotes. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bars = pd.read_parquet(DATA_PATH + f\"raw/m1/TOP-2022-06-01.parquet\")\n",
-    "# bars = split_adjust(bars, 'TOP')\n",
-    "# bars = reindex_and_fill(bars)\n",
-    "# bars = bars[['open', 'high', 'low', 'close', 'volume', 'tradeable']]\n",
-    "# dump = bars[(bars.index >= datetime(2023, 5, 4, hour=10, minute=45)) & (bars.index <= datetime(2023, 5, 4, hour=11, minute=8))].copy()\n",
-    "\n",
-    "# mpf.plot(dump, type='candle', style='yahoo', show_nontrading=False, title=\"TOP intraday halts on 2023-05-04\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It is handy to first create a function to remove the non-regular market hours from the minute bars."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_extended_hours(bars):\n",
-    "    \"\"\"\n",
-    "    Remove extended hours.\n",
-    "    \"\"\"\n",
-    "    # Remove non-regular trading minutes. Only the post-market hours of early closes remain.\n",
-    "    bars = bars.between_time(\"9:30\", \"15:59\")\n",
-    "\n",
-    "    # Remove early close post-market bars\n",
-    "    market_hours = get_market_calendar()\n",
-    "    early_closes = market_hours[market_hours[\"regular_close\"] != time(15, 59)]\n",
-    "    for date_, early_close in early_closes.iterrows():\n",
-    "        bars = bars[\n",
-    "            ~(\n",
-    "                (bars.index > datetime.combine(date_, early_close[\"regular_close\"]))\n",
-    "                & (bars.index <= datetime.combine(date_, time(19, 59)))\n",
-    "            )\n",
-    "        ]\n",
-    "\n",
-    "    return bars"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def flag_halts(bars):\n",
-    "#     \"\"\"\n",
-    "#     Only flags intraday halts for stocks >2.5M turnover. May get false-positive if there is low volume.\n",
-    "#     \"\"\"\n",
-    "#     bars_halted = remove_extended_hours(bars)\n",
-    "#     bars_halted = bars_halted[[\"close\", \"turnover\", \"tradeable\"]]\n",
-    "    \n",
-    "#     # Filter for volume\n",
-    "#     # To reduce false-positives, also filter for stocks that had at least 240 minutes of trading during regular hours.\n",
-    "#     daily = bars_halted[['turnover', 'close', 'tradeable']].resample('D').agg({'turnover': 'sum', 'close': 'last', 'tradeable': 'sum'})\n",
-    "#     daily = daily[(daily['turnover'] > 2_500_000) & (daily['tradeable'] > 240)]\n",
-    "#     has_volume = daily.index.date\n",
-    "\n",
-    "#     bars_halted['date'] = bars_halted.index.date\n",
-    "#     bars_halted = bars_halted[bars_halted['date'].isin(has_volume)]\n",
-    "\n",
-    "#     # Flag if 4x untradeable one after another. Only the 4-th (and lager) occasion is flagged.\n",
-    "#     bars_halted['halted_for_4+'] = (~bars_halted[\"tradeable\"]).rolling(4).sum() >= 4\n",
-    "#     # Also flag the 1st, 2nd and 3rd occasion.\n",
-    "#     bars_halted['halted'] = bars_halted['halted_for_4+'].replace(to_replace=False, method='bfill', limit=3)\n",
-    "\n",
-    "#     bars = bars.merge(bars_halted['halted'], how='left', left_index=True, right_index=True)\n",
-    "#     bars['halted'] = bars['halted'].fillna(False)\n",
-    "#     return bars"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bars = flag_halts(bars)\n",
-    "# bars[(bars.index >= datetime(2023, 5, 4, hour=10, minute=49)) & (bars.index <= datetime(2023, 5, 4, hour=11, minute=0))]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 7.6 Putting it all in a loop\n",
+    "# 7.5 Putting it all in a loop\n",
     "Later on, I got an error which was caused by stock prices being negative. This is caused by some special events (with a dividend type of 'SC'), where Polygon has already adjusted for it... We avoid this problem by manually deleting the dividend in the adjustment:\n",
     "* GEN: 2020-02-03\n",
     "* LIAN: 2024-02-26"
@@ -1418,9 +1313,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is no data for AMDI-2024-02-13\n",
+      "There is no data for ANTE-2015-05-07\n",
+      "There is no data for ARBR-2011-05-11\n",
+      "There is no data for ARGB-2004-05-28\n",
+      "There is no data for ARGS-2012-03-01\n",
+      "There is no data for ARNN-2004-02-25\n"
+     ]
+    }
+   ],
    "source": [
     "tickers_v3 = get_tickers(v=3)\n",
     "for index, row in tickers_v3.iterrows():\n",
@@ -1467,13 +1375,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7.7 Updating the ticker list\n",
+    "# 7.6 Updating the ticker list\n",
     "Now that we have the data, we can add two columns <code>start_data</code> and <code>end_data</code>."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1510,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1740,12 +1648,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7.8 Updates\n",
+    "# 7.7 Updates\n",
     "- Load the functions\n",
     "- Update trading_minutes\n",
     "- Put everything in m1_renamed to m1, to reverse renamings.\n",
     "- Run below cells.\n",
-    "- Run 7.7\n",
+    "- Run 7.6\n",
     "\n",
     "Loop through v3:\n",
     "- If the ID is in the (old) <code>tickers_v4</code> and <code>end_date</code>(v3) is larger than the old_END_DATE (v4), then we know this is a ticker that kept its listing. Do the processing on the new part only. However we must not forget that adjustments carry over to the old data. If in the new data there is a 100:1 split, all old data has to be multiplied with 100x. (Adjustments are really annoying. Dividends and splits should just be banned. Brokers should just quote in 10e-6 for stocks that dilute to infinity. Dividends can be perfectly replaced with share buybacks.)\n",
