--- a/09_aggregate.ipynb
+++ b/09_aggregate.ipynb
@@ -12,10 +12,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nathan\\miniconda3\\envs\\algotrading\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "from data import remove_extended_hours\n",
     "from datetime import datetime\n",
+    "from tickers import get_id\n",
     "import mplfinance as mpf\n",
     "import pandas as pd\n",
     "import os\n",
@@ -85,7 +95,7 @@
     }
    ],
    "source": [
-    "bars = pd.read_parquet(DATA_PATH + f\"processed/d1/SPY-2019-06-01.parquet\")\n",
+    "bars = pd.read_parquet(DATA_PATH + f\"processed/d1/{get_id('SPY')}.parquet\")\n",
     "bars = bars[bars.index > datetime(2020, 1, 1)]\n",
     "mpf.plot(bars.head(100), type='candle', style='yahoo', title='SPY ETF (daily)')"
    ]
@@ -114,7 +124,7 @@
     }
    ],
    "source": [
-    "bars = pd.read_parquet(DATA_PATH + f\"processed/m5/SPY-2019-06-01.parquet\")\n",
+    "bars = pd.read_parquet(DATA_PATH + f\"processed/m5/{get_id('SPY')}.parquet\")\n",
     "bars = bars[bars.index > datetime(2022, 1, 31, hour=16)]\n",
     "mpf.plot(bars.head(250), type='candle', style='yahoo', title='SPY ETF (5-min)', show_nontrading=False)"
    ]
