--- a/12_backtester_vectorized.ipynb
+++ b/12_backtester_vectorized.ipynb
@@ -15,13 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_data, get_id, last_trading_date_before_equal, get_market_dates, first_trading_date_after\n",
+    "from data import get_data\n",
+    "from tickers import get_id\n",
+    "from times import last_trading_date_before_equal, get_market_dates, first_trading_date_after\n",
     "from scipy import stats\n",
     "from datetime import datetime, date\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
@@ -31,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
